# ai-phone-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  INSTALL.md  README.md  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ai-code-quality.yml  ci.yml
docs/: VOICE_CLONING_SETUP.md  api.md  getting-started.md  index.md
examples/: README.md  basic_usage.py  crm_usage.py  run_server.py
src/: __init__.py  server.py
src/assistant/: __init__.py  action_handler.py  ai_router.py  claude_handler.py  gateway_handler.py  ollama_handler.py  phone_assistant.py
src/integrations/: crm_base.py  easyappointments.py  mock_crm.py  odoo_crm.py
src/prompts/: __init__.py  aiqso_prompts.py
src/utils/: config.py  logger.py
src/voice/: twilio_handler.py
tests/: test_claude_handler.py  test_config.py  test_mock_crm.py  test_server.py
